# optigami

./: .dockerignore  .gitignore  Dockerfile  README.md  RESEARCH_NOTES.md  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  server_legacy.py  train.py  train_origami.ipynb
docs/: optigami_handoff.md
engine/: fold_engine.py  materials.py  metrics.py  paper.py  physics.py  validation.py
env/: environment.py  paper_state.py  prompts.py  rewards.py  verifier.py
env/targets/: accordion_3h.fold  accordion_4h.fold  diagonal_anti.fold  diagonal_main.fold  half_horizontal.fold  half_vertical.fold  thirds_h.fold  thirds_v.fold  validator.py  validator_check.py
openenv_runtime/: __init__.py  environment.py  models.py
openenv_server/: __init__.py  app.py
planner/: decomposer.py  knowledge.py  parser.py  planner.py
plans/: implementation_plan.md
research 2/: research.md
research 2/openenv/: 2048_example.py  2048_pattern.md  overview.md
research 2/origami/: existing_work.md  fold_format.md  fold_types_deep.md  materials.md  math_physics_deep.md  metrics.md  origami_simulator_code.md  physics.md  python_tools.md  rendering_research.md  (+1 more)
server/: app.py  models.py  origami_environment.py  tasks.py  training_broadcast.py
sim/: animate.py  simulator.py
src/: App.css  App.js  App.test.js  index.css
tests/: test_graph.py  test_openenv_adapter.py  test_paper_state.py  test_verifier.py
trainer/: mock_env.py  prompts.py  rewards.py  train.py
training/: demo.py  demo_llm.py  runner.py
viewer/: training.html
viz/: renderer.py
(+9 files in other folders)
