[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "optigami"
version = "0.1.0"
description = "Optigami OpenEnv origami environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "numpy>=1.24.0",
  "openenv-core[core]>=0.2.1",
  "pydantic>=2.0.0",
  "shapely>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
